tests/sumo/pedestrian_model/striping/errors/disconnected_route_ignore/errors.sumo
Warning: No connection between edge ':C_w1-1.00' and edge 'CW_arrival_connector' found.
Warning: Person 'p0' could not find route across junction 'C', time=8.00.
